# lumelierServer

./: .gitignore  Cargo.toml  README.md  localProd.sh  lumelier-server.service  multiShow.md  prodAll.sh  publicProd.sh  runAll.sh  runAll.windows.cmd  runAll.windows.sh  rust-toolchain.toml
admin/: index.html  package-lock.json  package.json  vite.config.ts
admin/src/: color.ts  header.css  main.ts  shared-components.css  styles.css  variables.css  vite-env.d.ts
admin/src/app/: header-selectors.ts  index.ts  live-state.ts  open-show-modal.ts  routing.ts  show-management.ts
admin/src/components/: actions-dropdown.ts  distribution-chart.ts  info-bubble.ts  popup-tooltip.ts  refresh-every.ts  resizable-split.css  resizable-split.ts
admin/src/components/modal/: index.ts  (+1 more)
client/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
client/src/: color.ts  gps.ts  icons.ts  main.ts  popup.ts  timeline.ts  ui.ts
docs/: LOGGING.md  addSSE.md  backend-review-report.md  clock-sync-audit-report.md  simulator-cpu-regression-report.md
simulated-server/: Cargo.toml
simulated-server/src/: client_sync.rs  distribution.rs  main.rs  per_show.rs  routes.rs  runner.rs  runner_state.rs  store.rs
simulatedClientServer/: index.js  package.json  sample-distribution.js
src/: auth.rs  broadcast.rs  connections.rs  hosting.rs  live_shows.rs  log.rs  main.rs  time.rs  timeline_validator.rs  track_splitter_tree.rs
src/api/: admin.rs  broadcast.rs  map_state.rs  mod.rs  poll.rs  sanitize.rs  show_workspaces.rs  shows.rs  simulated_profiles.rs  venues.rs
(+104 files in other folders)
